@@ -26,7 +26,7 @@
 
 \layout Title
 \added_space_top vfill \added_space_bottom vfill 
-gputils 0.11.7
+gputils 0.11.8
 \layout Author
 
 James Bowman 
@@ -89,7 +89,7 @@ WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 \layout Standard
 
 You should have received a copy of the GNU General Public License along
- with gpasm; see the file COPYING.
+ with gputils; see the file COPYING.
  If not, write to the Free Software Foundation, 59 Temple Place - Suite
  330, Boston, MA 02111-1307, USA.
 \layout Section
