@@ -10,7 +10,7 @@
 %DVIPSCommandLine: dvips -t letter -o
 %+ /home/craig/gputils/cvs/gputils/doc/gputils.ps gputils.dvi
 %DVIPSParameters: dpi=600, compressed
-%DVIPSSource:  TeX output 2003.10.19:2351
+%DVIPSSource:  TeX output 2003.11.22:0138
 %%BeginProcSet: texc.pro
 %!
 /TeXDict 300 dict def TeXDict begin/N{def}def/B{bind def}N/S{exch}N/X{S
@@ -252,7 +252,7 @@ TeXBase1Encoding ReEncodeFont}21 206.559 /Times-Bold
 rf /Fl 136[72 2[28 39 33 2[50 50 78 7[44 1[44 50 44 17[72
 4[39 7[66 8[50 5[50 50 50 50 3[25 44[{TeXBase1Encoding ReEncodeFont}20
 99.6264 /Times-Roman rf /Fm 138[72 40 56 2[72 3[40 2[40
-1[72 47[72 5[72 72 1[36 46[{TeXBase1Encoding ReEncodeFont}11
+1[72 46[72 6[72 72 1[36 46[{TeXBase1Encoding ReEncodeFont}11
 143.462 /Times-Roman rf end
 %%EndProlog
 %%BeginSetup
@@ -264,7 +264,7 @@ letter
 
 %%EndSetup
 %%Page: 1 1
-1 0 bop 1557 2053 a Fm(gputils)35 b(0.11.7)1637 2418
+1 0 bop 1557 2053 a Fm(gputils)35 b(0.11.8)1637 2418
 y Fl(James)25 b(Bo)n(wman)1603 2659 y(October)g(19,)f(2003)p
 eop
 %%Page: 1 2
@@ -423,11 +423,11 @@ b(v)o(ersion.)328 2329 y(gputils)25 b(is)i(distrib)n(uted)d(in)i(the)g
 (w)o(arranty)f(of)h(MERCHANT)-8 b(ABILITY)29 b(or)f(FITNESS)g(FOR)i(A)f
 (P)-8 b(AR)j(TICULAR)30 b(PURPOSE.)203 2528 y(See)21
 b(the)f(GNU)h(General)e(Public)h(License)g(for)g(more)f(details.)328
-2628 y(Y)-9 b(ou)23 b(should)g(ha)n(v)o(e)g(recei)n(v)o(ed)f(a)i(cop)o
-(y)f(of)h(the)f(GNU)i(General)e(Public)g(License)h(along)f(with)h
-(gpasm;)h(see)f(the)g(\002le)203 2728 y(COPYING.)30 b(If)g(not,)i
-(write)e(to)g(the)g(Free)g(Softw)o(are)f(F)o(oundation,)h(59)f(T)-6
-b(emple)29 b(Place)i(-)f(Suite)g(330,)h(Boston,)h(MA)203
+2628 y(Y)-9 b(ou)22 b(should)h(ha)n(v)o(e)f(recei)n(v)o(ed)g(a)i(cop)o
+(y)e(of)h(the)g(GNU)h(General)e(Public)h(License)g(along)g(with)g
+(gputils;)i(see)e(the)h(\002le)203 2728 y(COPYING.)30
+b(If)g(not,)i(write)e(to)g(the)g(Free)g(Softw)o(are)f(F)o(oundation,)h
+(59)f(T)-6 b(emple)29 b(Place)i(-)f(Suite)g(330,)h(Boston,)h(MA)203
 2827 y(02111-1307,)16 b(USA.)203 3104 y Fe(1.1)119 b(T)-11
 b(ool)30 b(Flo)o(ws)203 3289 y Fi(gputils)20 b(can)g(be)g(used)g(in)g
 (tw)o(o)h(dif)n(ferent)d(w)o(ays,)j(absolute)e(mode)g(and)h
