@@ -147,6 +147,8 @@ enum pic_processor {
   pic16cr72,
   pic16cr83,
   pic16cr84,
+  pic16f54,
+  pic16f57,
   pic16f627,
   pic16f627a,
   pic16f628,
@@ -155,6 +157,7 @@ enum pic_processor {
   pic16f648a,
   pic16f676,
   pic16f684,
+  pic16f688,
   pic16f716,
   pic16f72,
   pic16f73,
